# imersao_dados_ago25

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 1.0-pvso-initial-data-exploration.ipynb  2.0-pvso-limpeza-dados.ipynb  3.0-pvso-analise-exploratoria.ipynb  4.0-pvso-entrega.py
