[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "imersao_dados_ago25"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "PVSO" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.13.5"


[tool.ruff]
line-length = 99
src = ["imersao_dados_ago25"]
include = ["pyproject.toml", "imersao_dados_ago25/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["imersao_dados_ago25"]
force-sort-within-sections = true

